# real-world-haskell

./: README.md  real-world-haskell.cabal  stack.yaml
src/: Lib.hs
test/: Spec.hs
